--- a/project_page.html
+++ b/project_page.html
@@ -44,10 +44,31 @@
         </div>
     </nav>
 
+    <!-- FILTER -->
+    <section class="filter">
+        <div class="container">
+            <h1>Filter by:</h1>
+            <div class="types">
+                <div class="type all active">
+                    <p>All</p>
+                </div>
+                <div class="type python">
+                    <p>python</p>
+                </div>
+                <div class="type engineering">
+                    <p>Engineering</p>
+                </div>
+                <div class="type java">
+                    <p>Java</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- PROJECT -->
      <section class="project">
         <div class="container">
-            <div class="card">
+            <div class="card all python">
                 <div class="display-img">
                     <a href="https://github.com/b-riana/vie_run" target="_blank"><img src="images/vieRun.png" alt="web"></a>
                 </div>
@@ -58,7 +79,7 @@
                 
             </div>
 
-            <div class="card">
+            <div class="card all engineering">
                 <div class="display-img">
                     <a class="display-img"  href="https://a360.co/45PFTg1" target="_blank"><img src="images/otv_webpage.png" alt="web"></a>
                 </div>
