Updating dynamic sizing, adding to about-me

--- a/project_page.html
+++ b/project_page.html
@@ -75,8 +75,33 @@
                 <div class="project-text">
                     <h1 class="project-heading">Vie Run</h1>
                     <p>Play as a courageous chihuahua as you explore the outdoors. Level up while avoiding snakes, eating bugs, and chasing birds.</p>
+                    <div class="tags">
+                        <h4>Tags:</h4>
+                    <ul>
+                        <li>python</li>
+                        <li>pyGame</li>
+                        <li>Web Development</li>
+                    </ul>
+                    </div>
                 </div>
                 
+            </div>
+
+            <div class="card all c">
+                <div class="display-img">
+                    <a class="display-img"  href="cs_projects/hashSet" download="hashSet" target="_blank"><img src="images/hash_pic.png" alt="web"></a>
+                </div>
+                <div class="project-text">
+                    <h1 class="project-heading">Hash Set Functions</h1>
+                    <p>Coded and designed several utility functions to operate upon hash sets. Included functions: hashcode(), hashset_init(), hashset_contains()</p>
+                    <div class="tags">
+                        <h4>Tags:</h4>
+                    <ul>
+                        <li>C</li>
+                        <li>Algorithm Development</li>
+                    </ul>
+                    </div>
+                </div>
             </div>
 
             <div class="card all engineering">
@@ -101,6 +126,15 @@
                             </a>
                         </li>
                     </ul>
+
+                    <div class="tags">
+                        <h4>Tags:</h4>
+                    <ul>
+                        <li>Engineering</li>
+                        <li>Fusion360</li>
+                        <li>Team Project</li>
+                    </ul>
+                    </div>
                 </div>
             </div>
 
