Updating home page

--- a/about_me.html
+++ b/about_me.html
@@ -55,6 +55,31 @@
                 <img src="images/photo.png" alt="selfie">
             </div>
         </div>
+        <div class="container">
+            <div class="history">
+                <a class="docs" href="documents/Resume_Briana_Rosado_8_16.pdf" download="Resume_Briana_Rosado_8_16.pdf">
+                    <i class="fa-solid fa-download"></i>Download resume here.
+                </a>
+                <h2>Education:</h2>
+                <ul class="education">
+                    <li class="institute">
+                        <h3><i class="fa-solid fa-book"></i>University of Maryland College Park&emsp;&emsp;Aug. 2024-Present</h3>
+                        <ul>
+                            <li style="margin-left:2em">GPA: 3.94/4.0, Credits: 85</li>
+                            <li style="margin-left:2em; padding-bottom: 0;"><a class="docs" href="documents/8_19_25_unofficial_transcript.pdf" download="8_19_25_unofficial_transcript.pdf">Unoffical Transcript</a></li>
+                        </ul>
+                    </li>
+                    <li class="institute">
+                        <h3><i class="fa-solid fa-book"></i>Harford Community College&emsp;&emsp;Aug. 2023-Aug. 2025</h3>
+                        <ul>
+                            <li style="margin-left:2em">GPA: 4.0/4.0, Credits: 16</li>
+                            <li style="margin-left:2em; padding-bottom: 0;"><a class="docs" href="documents/8_19_25_unofficial_transcript.pdf" download="8_19_25_unofficial_transcript.pdf">Unoffical Transcript</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
 
      </section>
 
