Updated images and bio

--- a/project_page.html
+++ b/project_page.html
@@ -138,6 +138,36 @@
                 </div>
             </div>
 
+            <div class="card all javascript html css">
+                <div class="display-img poster-container">
+                    <a class="display-img .poster-container"  href="#" target="_blank"><img class="poster" src="images/poster.png" alt="web"></a>
+                </div>
+                <div class="project-text">
+                    <h1 class="project-heading">ASL Avatar Website</h1>
+                    <p>Designed a local web program to display and queue ASL animations for quick use.</p>
+                    <b>Supplementary documents:</b>
+                    <ul>
+                        <li><a href="https://1drv.ms/p/c/d85f5f52ebaf1295/EYMHdxarLMZBrMppw14z9c0Beyb5g0D5VS52IJ0wR7ssvQ?e=qxWVtR" target="_blank">
+                            Progress Presentation
+                            </a>
+                        </li>
+                        <li><a href="https://drive.google.com/file/d/1GyfPwZ_ku68btJC_JdDPmNwfDqa_5VTw/view?usp=sharing" target="_blank">
+                            Final Poster
+                            </a>
+                        </li>
+                    </ul>
+
+                    <div class="tags">
+                        <h4>Tags:</h4>
+                    <ul>
+                        <li>Web Design</li>
+                        <li>JavaScript</li>
+                        <li>HTML</li>
+                    </ul>
+                    </div>
+                </div>
+            </div>
+
         </div>
      </section>
     <script src="main.js"></script>
