--- a/about_me.html
+++ b/about_me.html
@@ -49,7 +49,7 @@
         <div class="container">
             <div class="intro-content">
                 <h1>Hi, my name is Briana Rosado.</h1>
-                <h3>I am a sophomore studying Computer Engineering at the University of Maryland with plans to minor in Quantum Engineering and Computative Finance. I love tackling complex challenges, learning from collaborative teams, and finding creative solutions—whether I’m designing hardware, coding, or exploring new ways technology can make an impact.</h3>
+                <h3>I am a sophomore studying Computer Engineering at the University of Maryland with a minor in General Business. I also plan to minor in Quantum Engineering and Science. I love tackling complex challenges, learning from collaborative teams, and finding creative solutions—whether I’m designing hardware, coding, or exploring new ways technology can make an impact.</h3>
             </div>
             <div class="intro-pic">
                 <img src="images/photo.png" alt="selfie">
@@ -65,8 +65,8 @@
                     <li class="institute">
                         <h3><i class="fa-solid fa-book"></i>University of Maryland College Park&emsp;&emsp;Aug. 2024-Present</h3>
                         <ul>
-                            <li style="margin-left:2em">GPA: 3.94/4.0, Credits: 85</li>
-                            <li style="margin-left:2em; padding-bottom: 0;"><a class="docs" href="documents/8_19_25_unofficial_transcript.pdf" download="8_19_25_unofficial_transcript.pdf">Unoffical Transcript</a></li>
+                            <li style="margin-left:2em">GPA: 3.94/4.0, Credits: 97</li>
+                            <li style="margin-left:2em; padding-bottom: 0;"><a class="docs" href="documents/Rosado_umd_transcript_10_17" download="8_19_25_unofficial_transcript.pdf">Unoffical Transcript</a></li>
                         </ul>
                     </li>
                     <li class="institute">
